Them man hinh Sign up

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,6 +32,12 @@
                 ><i class="ti-lock text-custom m-r-10"></i> Lock screen</a
               >
             </li>
+            <li>
+              <a href="/signup">
+                <i class="fa fa-registered text-custom m-r-10" aria-hidden="true"></i>
+                 Register
+              </a>
+            </li>
             <li class="divider"></li>
             <li>
               <a href="javascript:void(0)"
