--- a/views/vwAccount/login.ejs
+++ b/views/vwAccount/login.ejs
@@ -9,14 +9,12 @@
     <div class="account-pages"></div>
     <div class="clearfix"></div>
     <div class="wrapper-page">
-        <div class=" card-box">
+        <div class="card-box">
             <div class="panel-heading">
                 <h3 class="text-center"> Sign In to <strong class="text-custom">Drug Store</strong> </h3>
             </div>
-
-
             <div class="panel-body">
-                <form class="form-horizontal m-t-20" action="index.html">
+                <form class="form-horizontal m-t-20" action="#">
 
                     <div class="form-group ">
                         <div class="col-xs-12">
@@ -45,8 +43,8 @@
                     <div class="form-group text-center m-t-40">
                         <div class="col-xs-12">
                             <button class="btn btn-success btn-block text-uppercase waves-effect waves-light"
-                                type="submit">Log
-                                In</button>
+                                type="submit">Log In
+                            </button>
                         </div>
                     </div>
 
@@ -60,12 +58,6 @@
 
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12 text-center">
-                <p>Don't have an account? <a href="/signup" class="text-primary m-l-5"><b>Sign Up</b></a></p>
-            </div>
-        </div>
-
     </div>
     <% include ../partials/script %>
 </body>
