--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
               >
             </li>
             <li>
-              <a href="/signup">
+              <a href="/register">
                 <i class="fa fa-registered text-custom m-r-10" aria-hidden="true"></i>
                  Register
               </a>
