Add search ft, load database into view

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,13 +34,16 @@
             </li>
             <li>
               <a href="/register">
-                <i class="fa fa-registered text-custom m-r-10" aria-hidden="true"></i>
-                 Register
+                <i
+                  class="fa fa-registered text-custom m-r-10"
+                  aria-hidden="true"
+                ></i>
+                Register
               </a>
             </li>
             <li class="divider"></li>
             <li>
-              <a href="javascript:void(0)"
+              <a href="/logout"
                 ><i class="ti-power-off text-danger m-r-10"></i> Logout</a
               >
             </li>
@@ -57,7 +60,7 @@
       <!-- Navigation Menu-->
       <ul class="navigation-menu">
         <li class="has-submenu">
-          <a href="/import"><i class="md md-dashboard"></i>Nhập xuất</a>
+          <a href="/import-drug"><i class="md md-dashboard"></i>Nhập xuất</a>
         </li>
 
         <li class="has-submenu">
