--- a/views/register.ejs
+++ b/views/register.ejs
@@ -87,11 +87,12 @@
             <div class="form-group">
               <label for="txtEmail">Phone Number</label>
               <input
-                type="text"
+                type="tel"
                 class="form-control"
                 id="txtEmail"
                 name="phone"
                 placeholder="0123456789"
+                pattern="[0-9]{11}"
               />
             </div>
             <div class="form-group">
