--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -60,6 +60,9 @@
       <!-- Navigation Menu-->
       <ul class="navigation-menu">
         <li class="has-submenu">
+          <a href="/"><i class="md md-layers"></i>Tổng quan</a>
+        </li>
+        <li class="has-submenu">
           <a href="/import-drug"><i class="md md-dashboard"></i>Nhập xuất</a>
         </li>
 
@@ -70,16 +73,9 @@
         <li class="has-submenu">
           <a href="#"><i class="md md-layers"></i>Giao dịch</a>
         </li>
-        <li class="has-submenu">
-          <a href="#"><i class="md md-class"></i>Sổ quỹ</a>
-        </li>
 
         <li class="has-submenu">
           <a href="#"><i class="md md-pages"></i>Báo cáo</a>
-        </li>
-
-        <li class="has-submenu">
-          <a href="#"><i class="md md-folder-special"></i>Tra cứu</a>
         </li>
       </ul>
       <!-- End navigation menu        -->
