--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <!-- Logo container-->
     <div class="logo">
-      <a href="index.html" class="logo"><span>Drug Store</span></a>
+      <a href="/" class="logo"><span>Drug Store</span></a>
     </div>
     <!-- End Logo container-->
 
@@ -71,11 +71,7 @@
         </li>
 
         <li class="has-submenu">
-          <a href="#"><i class="md md-layers"></i>Giao dịch</a>
-        </li>
-
-        <li class="has-submenu">
-          <a href="#"><i class="md md-pages"></i>Báo cáo</a>
+          <a href="/get-order"><i class="md md-pages"></i>Báo cáo</a>
         </li>
       </ul>
       <!-- End navigation menu        -->
