--- a/views/register.ejs
+++ b/views/register.ejs
@@ -72,6 +72,7 @@
                 id="txtName"
                 name="name"
                 placeholder="John Witch"
+                required
               />
             </div>
             <div class="form-group">
